--- a/photoshare/photoshare/CommunityCollectionCell_iPad.xib
+++ b/photoshare/photoshare/CommunityCollectionCell_iPad.xib
@@ -8,7 +8,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CVCell" id="myh-A6-ghJ" customClass="CollectionViewCell">
             <rect key="frame" x="0.0" y="0.0" width="180" height="175"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="180" height="175"/>
                 <autoresizingMask key="autoresizingMask"/>
